--- a/module-1/String-Operations/your-code/main.ipynb
+++ b/module-1/String-Operations/your-code/main.ipynb
@@ -342,55 +342,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 228,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "123abc\n",
-      "['123']\n",
-      "123\n",
+      "{<_sre.SRE_Match object; span=(0, 3), match='123'>: '123abc', <_sre.SRE_Match object; span=(3, 6), match='123'>: 'abc123', <_sre.SRE_Match object; span=(9, 10), match='1'>: 'JohnSmith1', <_sre.SRE_Match object; span=(4, 5), match='4'>: 'ABBY4', None: 'JANE'}\n",
       "\n",
       "\n",
-      "123abc\n",
-      "abc123\n",
-      "['123']\n",
-      "123\n",
+      "{<_sre.SRE_Match object; span=(0, 3), match='123'>: '123abc', <_sre.SRE_Match object; span=(3, 6), match='123'>: 'abc123', <_sre.SRE_Match object; span=(9, 10), match='1'>: 'JohnSmith1', <_sre.SRE_Match object; span=(4, 5), match='4'>: 'ABBY4'}\n",
       "\n",
       "\n",
-      "abc123\n",
-      "JohnSmith1\n",
-      "['1']\n",
-      "1\n",
+      "dict_values(['123abc', 'abc123', 'JohnSmith1', 'ABBY4'])\n",
       "\n",
       "\n",
-      "JohnSmith1\n",
-      "ABBY4\n",
-      "['4']\n",
-      "4\n",
-      "\n",
-      "\n",
-      "ABBY4\n",
-      "JANE\n",
-      "[]\n",
-      "\n",
-      "\n",
-      "\n",
-      "JANE\n"
+      "['123abc', 'abc123', 'JohnSmith1', 'ABBY4']\n"
      ]
     }
    ],
    "source": [
     "data = ['123abc', 'abc123', 'JohnSmith1', 'ABBY4', 'JANE']\n",
     "\n",
+    "import re\n",
     "\n",
-    "# Your code here:\n",
     "\n",
-    "# Sorry, I didn't find the solution to this question after trying many ways in regex\n",
+    "dic={}   # Create a dictionary, Key=the result of re.search (match/None), Value= items in list of data\n",
+    "for i in data:\n",
+    "    value=i\n",
+    "    key=re.search('[\\d]+', i)\n",
+    "    dic[key]=value\n",
+    "print(dic)\n",
+    "print('\\n')\n",
     "\n",
-    " "
+    "   \n",
+    "del dic[None]   # Delete the items in dictionary, if its key=None\n",
+    "print(dic)\n",
+    "print('\\n')\n",
+    "\n",
+    "\n",
+    "values=dic.values() # It is the type of class\n",
+    "print(values)\n",
+    "print('\\n')\n",
+    "\n",
+    "\n",
+    "list_number=[]     # Convert to type list\n",
+    "for v in values:\n",
+    "    list_number.append(v)\n",
+    "print(list_number)\n",
+    "    "
    ]
   },
   {
