--- a/module-1/Dicts-Sets-Tuples/your-code/challenge-2.ipynb
+++ b/module-1/Dicts-Sets-Tuples/your-code/challenge-2.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,11 +38,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[32, 2, 24, 94, 5, 21, 68, 27, 22, 6, 17, 10, 44, 15, 0, 12, 61, 69, 30, 37, 33, 47, 63, 41, 93, 59, 29, 8, 88, 70, 72, 55, 64, 85, 57, 7, 26, 95, 14, 75, 34, 46, 48, 52, 92, 1, 89, 98, 54, 81, 76, 79, 90, 53, 91, 3, 18, 45, 82, 66, 28, 84, 35, 25, 65, 49, 71, 73, 16, 38, 19, 60, 56, 31, 20, 80, 58, 99, 11, 36]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "80"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "sample_list_1=random.sample(range(100),80)\n",
+    "print(sample_list_1)\n",
+    "len(sample_list_1)\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -54,11 +80,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{0, 1, 2, 3, 5, 6, 7, 8, 10, 11, 12, 14, 15, 16, 17, 18, 19, 20, 21, 22, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 41, 44, 45, 46, 47, 48, 49, 52, 53, 54, 55, 56, 57, 58, 59, 60, 61, 63, 64, 65, 66, 68, 69, 70, 71, 72, 73, 75, 76, 79, 80, 81, 82, 84, 85, 88, 89, 90, 91, 92, 93, 94, 95, 98, 99}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "\n",
+    "set1=set(sample_list_1)\n",
+    "print(set1)"
    ]
   },
   {
@@ -77,11 +114,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[25, 10, 62, 39, 55, 13, 37, 86, 59, 75, 65, 51, 21, 72, 18, 16, 51, 58, 74, 23, 37, 20, 53, 69, 88, 31, 18, 73, 50, 57, 48, 61, 24, 47, 47, 51, 29, 90, 13, 59, 9, 89, 92, 44, 28, 83, 46, 37, 88, 78, 43, 20, 41, 40, 7, 35, 64, 25, 42, 97, 26, 15, 98, 4, 7, 12, 21, 99, 6, 20, 90, 13, 88, 7, 68, 47, 50, 34, 79, 4]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "80"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "\n",
+    "\n",
+    "sample_list_2=[random.randint(0,100) for i in range(80)]\n",
+    "\n",
+    "print(sample_list_2)\n",
+    "\n",
+    "len(sample_list_2)\n"
    ]
   },
   {
@@ -93,11 +154,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{4, 6, 7, 9, 10, 12, 13, 15, 16, 18, 20, 21, 23, 24, 25, 26, 28, 29, 31, 34, 35, 37, 39, 40, 41, 42, 43, 44, 46, 47, 48, 50, 51, 53, 55, 57, 58, 59, 61, 62, 64, 65, 68, 69, 72, 73, 74, 75, 78, 79, 83, 86, 88, 89, 90, 92, 97, 98, 99}\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "59"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "\n",
+    "set2=set(sample_list_2)\n",
+    "print(set2)\n",
+    "\n",
+    "len(set2)"
    ]
   },
   {
@@ -109,11 +193,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{0, 1, 2, 3, 5, 8, 11, 14, 17, 19, 22, 27, 30, 32, 33, 36, 38, 45, 49, 52, 54, 56, 60, 63, 66, 70, 71, 76, 80, 81, 82, 84, 85, 91, 93, 94, 95}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "set3=set1-set2\n",
+    "print(set3)\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -125,11 +221,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{97, 4, 39, 40, 9, 42, 43, 74, 13, 78, 50, 51, 83, 86, 23, 62}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "\n",
+    "set4=set2-set1\n",
+    "print(set4)\n"
    ]
   },
   {
@@ -141,11 +248,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{6, 7, 10, 12, 15, 16, 18, 20, 21, 24, 25, 26, 28, 29, 31, 34, 35, 37, 41, 44, 46, 47, 48, 53, 55, 57, 58, 59, 61, 64, 65, 68, 69, 72, 73, 75, 79, 88, 89, 90, 92, 98, 99}\n",
+      "43\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "\n",
+    "set5=set1.intersection(set2)\n",
+    "print(set5)"
    ]
   },
   {
@@ -165,11 +284,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "80\n",
+      "59\n",
+      "37\n",
+      "16\n",
+      "43\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "\n",
+    "print(len(set1))  #set1==80\n",
+    "print(len(set2))  #set2==59\n",
+    "print(len(set3)) #set3=set1-set2=37\n",
+    "print(len(set4)) #set4=set2-set1=16 \n",
+    "print(len(set5)) #intersection==43\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -181,11 +321,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "set6=set()\n"
    ]
   },
   {
@@ -197,11 +338,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{0, 1, 2, 3, 5, 6, 7, 8, 10, 11, 12, 14, 15, 16, 17, 18, 19, 20, 21, 22, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 41, 44, 45, 46, 47, 48, 49, 52, 53, 54, 55, 56, 57, 58, 59, 60, 61, 63, 64, 65, 66, 68, 69, 70, 71, 72, 73, 75, 76, 79, 80, 81, 82, 84, 85, 88, 89, 90, 91, 92, 93, 94, 95, 98, 99}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "\n",
+    "set6.update(set3,set5)\n",
+    "print(set6)\n",
+    "\n"
    ]
   },
   {
@@ -213,11 +366,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "\n",
+    "print(set1==set6)"
    ]
   },
   {
@@ -229,11 +392,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "\n",
+    "check1=set2.issubset(set1)\n",
+    "print(check1)\n",
+    "\n",
+    "check2=set3.issubset(set1)\n",
+    "print(check2)\n",
+    "\n"
    ]
   },
   {
@@ -247,11 +426,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "\n",
+    "aggregate1=set3.union(set4).union(set5)\n",
+    "\n",
+    "aggregate2=set1.union(set2)\n",
+    "\n",
+    "print(aggregate1==aggregate2)\n"
    ]
   },
   {
@@ -263,11 +456,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 71,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{6, 7, 8, 10, 11, 12, 14, 15, 16, 17, 18, 19, 20, 21, 22, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 41, 44, 45, 46, 47, 48, 49, 52, 53, 54, 55, 56, 57, 58, 59, 60, 61, 63, 64, 65, 66, 68, 69, 70, 71, 72, 73, 75, 76, 79, 80, 81, 82, 84, 85, 88, 89, 90, 91, 92, 93, 94, 95, 98, 99}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "\n",
+    "set1.pop()\n",
+    "print(set1)\n",
+    "\n"
    ]
   },
   {
@@ -283,12 +487,31 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{6, 7, 8, 10, 12, 14, 15, 16, 17, 18, 20, 22, 24, 25, 26, 27, 28, 30, 32, 33, 34, 35, 36, 37, 38, 44, 45, 46, 47, 48, 52, 53, 54, 55, 56, 57, 58, 60, 63, 64, 65, 66, 68, 70, 72, 73, 75, 76, 80, 82, 84, 85, 88, 90, 92, 93, 94, 95, 98}\n"
+     ]
+    }
+   ],
+   "source": [
+    "list_to_remove = [1, 9, 11, 19, 21, 29, 31, 39, 41, 49, 51, 59, 61, 69, 71, 79, 81, 89, 91, 99]\n",
+    "\n",
+    "\n",
+    "set0=set1-set(list_to_remove)\n",
+    "print(set0)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Your code here\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
@@ -307,7 +530,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
