--- a/module-1/Dicts-Sets-Tuples/your-code/challenge-1.ipynb
+++ b/module-1/Dicts-Sets-Tuples/your-code/challenge-1.ipynb
@@ -15,11 +15,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here\n"
+    "tup=('I',)\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -33,11 +35,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('I',)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "tuple"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "print(tup)\n",
+    "type(tup)"
    ]
   },
   {
@@ -59,9 +81,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here\n",
+    "tup=(\"r\", \"o\", \"n\", \"h\", \"a\", \"c\", \"k\")\n",
     "\n",
-    "# Your explanation here\n"
+    "\n",
+    "# Tuple is immutable, no elements can be added, unless creating a new tuple\n"
    ]
   },
   {
@@ -79,13 +102,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('I', 'r', 'o', 'n', 'h', 'a', 'c', 'k')\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n",
+    "tup=(\"I\", \"r\", \"o\", \"n\", \"h\", \"a\", \"c\", \"k\") \n",
     "\n",
-    "# Your explanation here\n"
+    "\n",
+    "# Tuple is immutable, no elements can be ressigned, unless creating a new tuple\n"
    ]
   },
   {
@@ -103,11 +135,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('I', 'r', 'o', 'n')\n",
+      "('h', 'a', 'c', 'k')\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "tup1=tup[:4]\n",
+    "print(tup1)\n",
+    "\n",
+    "tup2=tup[-4:]\n",
+    "print(tup2)\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -121,11 +172,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('I', 'r', 'o', 'n', 'h', 'a', 'c', 'k')\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "tup3=tup1+tup2\n",
+    "print(tup3)\n",
+    "\n",
+    "print(tup3==tup)\n"
    ]
   },
   {
@@ -137,11 +200,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "a=len(tup1)+len(tup2)\n",
+    "print(a)\n",
+    "\n",
+    "b=len(tup3)\n",
+    "\n",
+    "print(a==b)\n"
    ]
   },
   {
@@ -153,11 +230,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "#tuple.index(element)\n",
+    "\n",
+    "a=tup3.index('h')\n",
+    "\n",
+    "print(a)\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -177,11 +269,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a True\n",
+      "b False\n",
+      "c True\n",
+      "d False\n",
+      "e False\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "letters = [\"a\", \"b\", \"c\", \"d\", \"e\"]\n",
+    "\n",
+    "for i in letters:\n",
+    "    if i in tup3:\n",
+    "        print(i+' True')\n",
+    "    else:\n",
+    "        print(i+' False')\n"
    ]
   },
   {
@@ -195,12 +305,44 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a appears in tup3 for 1 time\n",
+      "b appears in tup3 for 0 time\n",
+      "c appears in tup3 for 1 time\n",
+      "d appears in tup3 for 0 time\n",
+      "e appears in tup3 for 0 time\n"
+     ]
+    }
+   ],
+   "source": [
+    "tup3=('I', 'r', 'o', 'n', 'h', 'a', 'c', 'k')\n",
+    "letters=[\"a\", \"b\", \"c\", \"d\", \"e\"]\n",
+    "\n",
+    "# target.count(the item wants to account)\n",
+    "\n",
+    "for i in letters:\n",
+    "    print(str(i) + ' appears in tup3 for '+ str(tup3.count(i)) + ' time')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Your code here\n"
-   ]
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -219,7 +361,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
