--- a/module-1/List-Comprehension/your-code/main.ipynb
+++ b/module-1/List-Comprehension/your-code/main.ipynb
@@ -27,10 +27,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50]\n"
+     ]
+    }
+   ],
+   "source": [
+    "lst_1=[i for i in range(1,51)]\n",
+    "print(lst_1)\n",
+    "\n",
+    "#lst_2=[i for i in range(1,51) if i % 2 ==0 and i % 5 ==0]\n",
+    "#print(lst_2)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -41,10 +55,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[3, 5, 7, 9, 11, 13, 15, 17, 19, 21, 23, 25, 27, 29, 31, 33, 35, 37, 39, 41, 43, 45, 47, 49, 51, 53, 55, 57, 59, 61, 63, 65, 67, 69, 71, 73, 75, 77, 79, 81, 83, 85, 87, 89, 91, 93, 95, 97, 99, 101, 103, 105, 107, 109, 111, 113, 115, 117, 119, 121, 123, 125, 127, 129, 131, 133, 135, 137, 139, 141, 143, 145, 147, 149, 151, 153, 155, 157, 159, 161, 163, 165, 167, 169, 171, 173, 175, 177, 179, 181, 183, 185, 187, 189, 191, 193, 195, 197, 199]\n"
+     ]
+    }
+   ],
+   "source": [
+    "lst=[i for i in range(2,201) if i % 2 ==1]\n",
+    "print(lst)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -55,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,15 +93,26 @@
     "       [0.71725408, 0.87702738, 0.31244595, 0.76615487],\n",
     "       [0.20754036, 0.57871812, 0.07214068, 0.40356048],\n",
     "       [0.12149553, 0.53222417, 0.9976855 , 0.12536346],\n",
-    "       [0.80930099, 0.50962849, 0.94555126, 0.33364763]];"
+    "       [0.80930099, 0.50962849, 0.94555126, 0.33364763]];\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.84062117, 0.48006452, 0.7876326, 0.77109654, 0.44409793, 0.09014516, 0.81835917, 0.87645456, 0.7066597, 0.09610873, 0.41247947, 0.57433389, 0.29960807, 0.42315023, 0.34452557, 0.4751035, 0.17003563, 0.46843998, 0.92796258, 0.69814654, 0.41290051, 0.19561071, 0.16284783, 0.97016248, 0.71725408, 0.87702738, 0.31244595, 0.76615487, 0.20754036, 0.57871812, 0.07214068, 0.40356048, 0.12149553, 0.53222417, 0.9976855, 0.12536346, 0.80930099, 0.50962849, 0.94555126, 0.33364763]\n"
+     ]
+    }
+   ],
+   "source": [
+    "lst=[x for y in a for x in y]\n",
+    "print(lst)\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -87,10 +123,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.84062117, 0.7876326, 0.77109654, 0.81835917, 0.87645456, 0.7066597, 0.57433389, 0.92796258, 0.69814654, 0.97016248, 0.71725408, 0.87702738, 0.76615487, 0.57871812, 0.53222417, 0.9976855, 0.80930099, 0.50962849, 0.94555126]\n"
+     ]
+    }
+   ],
+   "source": [
+    "lst=[x for y in a for x in y if x>=0.5]\n",
+    "print(lst)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -101,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,10 +170,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.55867166, 0.06210792, 0.08147297, 0.82579068, 0.91512478, 0.06833034, 0.05440634, 0.65857693, 0.30296619, 0.06769833, 0.96031863, 0.51293743, 0.09143215, 0.71893382, 0.45850679, 0.58256464, 0.59005654, 0.56266457, 0.71600294, 0.87392666, 0.11434044, 0.8694668, 0.65669313, 0.10708681, 0.07529684, 0.46470767, 0.47984544, 0.65368638, 0.14901286, 0.23760688]\n",
+      "30\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "lst=[i for x in b \n",
+    "       for y in x\n",
+    "       for i in y]\n",
+    "\n",
+    "print(lst)\n",
+    "print(len(lst))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -137,10 +201,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.08147297, 0.06833034, 0.30296619, 0.45850679, 0.11434044, 0.10708681, 0.47984544, 0.23760688]\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "lst2=[y[-1] for x in b\n",
+    "        for y in x\n",
+    "        if y[-1]<=0.5]\n",
+    "\n",
+    "print(lst2)\n",
+    "    \n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -154,7 +234,13 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import os\n",
+    "import pandas as pd\n",
+    "\n",
+    "file_list=[f for f in os.listdir('/Users/abc/dataV2-labs/module-1/List-Comprehension/data') if f.endswith('.csv')]\n",
+    "print(file_list)\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -207,7 +293,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
