--- a/module-1/Numpy/your-code/main.ipynb
+++ b/module-1/Numpy/your-code/main.ipynb
@@ -12,11 +12,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here"
+    "import numpy as np"
    ]
   },
   {
@@ -28,11 +28,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'Print' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-2-718cd2e9435b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# your code here\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mPrint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mNumpy\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'Print' is not defined"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "Print(Numpy)"
    ]
   },
   {
@@ -45,16 +58,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[0.08639216 0.14994641 0.25333583 0.30481673 0.28851558]\n",
+      "  [0.24726271 0.86527519 0.19673267 0.68732616 0.34692976]\n",
+      "  [0.30463244 0.93057679 0.12604749 0.41342702 0.14470182]]\n",
+      "\n",
+      " [[0.16178458 0.52602654 0.50854505 0.0807047  0.29699063]\n",
+      "  [0.39723305 0.69824029 0.35982204 0.93213748 0.75934602]\n",
+      "  [0.1043032  0.51699651 0.33682344 0.34572235 0.70329057]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Method 1"
+    "# Method 1\n",
+    "a=np.random.random((2,3,5))\n",
+    "print(a)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,27 +108,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[0.08639216 0.14994641 0.25333583 0.30481673 0.28851558]\n",
+      "  [0.24726271 0.86527519 0.19673267 0.68732616 0.34692976]\n",
+      "  [0.30463244 0.93057679 0.12604749 0.41342702 0.14470182]]\n",
+      "\n",
+      " [[0.16178458 0.52602654 0.50854505 0.0807047  0.29699063]\n",
+      "  [0.39723305 0.69824029 0.35982204 0.93213748 0.75934602]\n",
+      "  [0.1043032  0.51699651 0.33682344 0.34572235 0.70329057]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### 5. Create a 5x2x3 3-dimensional array with all values equaling 1. Assign the array to variable *b*."
+    "print(a)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here"
+    "# 5. Create a 5x2x3 3-dimensional array with all values equaling 1. Assign the array to variable *b*."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "b=np.ones((5,2,3),dtype = int)"
    ]
   },
   {
@@ -111,11 +156,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[1 1 1]\n",
+      "  [1 1 1]]\n",
+      "\n",
+      " [[1 1 1]\n",
+      "  [1 1 1]]\n",
+      "\n",
+      " [[1 1 1]\n",
+      "  [1 1 1]]\n",
+      "\n",
+      " [[1 1 1]\n",
+      "  [1 1 1]]\n",
+      "\n",
+      " [[1 1 1]\n",
+      "  [1 1 1]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "print(b)"
    ]
   },
   {
@@ -127,11 +193,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "print(a.size==b.size)\n"
    ]
   },
   {
@@ -143,11 +217,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your answer here"
+    "# print(np.add(a,b))\n",
+    "\n",
+    "# Can't add up a and b, because these 2 arrays have different shapes\n"
    ]
   },
   {
@@ -159,11 +235,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[1 1 1 1 1]\n",
+      "  [1 1 1 1 1]\n",
+      "  [1 1 1 1 1]]\n",
+      "\n",
+      " [[1 1 1 1 1]\n",
+      "  [1 1 1 1 1]\n",
+      "  [1 1 1 1 1]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "\n",
+    "c=np.reshape(b,((2,3,5)))\n",
+    "print(c)\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -175,11 +270,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[1.08639216 1.14994641 1.25333583 1.30481673 1.28851558]\n",
+      "  [1.24726271 1.86527519 1.19673267 1.68732616 1.34692976]\n",
+      "  [1.30463244 1.93057679 1.12604749 1.41342702 1.14470182]]\n",
+      "\n",
+      " [[1.16178458 1.52602654 1.50854505 1.0807047  1.29699063]\n",
+      "  [1.39723305 1.69824029 1.35982204 1.93213748 1.75934602]\n",
+      "  [1.1043032  1.51699651 1.33682344 1.34572235 1.70329057]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code/answer here"
+    "# a's shape=(2,3,5)\n",
+    "# b's shape=(5,2,3) --> reshape (2,3,5)\n",
+    "\n",
+    "\n",
+    "d=np.add(a,c)\n",
+    "print(d)\n"
    ]
   },
   {
@@ -191,11 +305,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[0.08639216 0.14994641 0.25333583 0.30481673 0.28851558]\n",
+      "  [0.24726271 0.86527519 0.19673267 0.68732616 0.34692976]\n",
+      "  [0.30463244 0.93057679 0.12604749 0.41342702 0.14470182]]\n",
+      "\n",
+      " [[0.16178458 0.52602654 0.50854505 0.0807047  0.29699063]\n",
+      "  [0.39723305 0.69824029 0.35982204 0.93213748 0.75934602]\n",
+      "  [0.1043032  0.51699651 0.33682344 0.34572235 0.70329057]]]\n",
+      "--------------------------------------------------------------------------------\n",
+      "[[[1.08639216 1.14994641 1.25333583 1.30481673 1.28851558]\n",
+      "  [1.24726271 1.86527519 1.19673267 1.68732616 1.34692976]\n",
+      "  [1.30463244 1.93057679 1.12604749 1.41342702 1.14470182]]\n",
+      "\n",
+      " [[1.16178458 1.52602654 1.50854505 1.0807047  1.29699063]\n",
+      "  [1.39723305 1.69824029 1.35982204 1.93213748 1.75934602]\n",
+      "  [1.1043032  1.51699651 1.33682344 1.34572235 1.70329057]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code/answer here"
+    "# your code/answer here\n",
+    "print(a)\n",
+    "print('--'*40)\n",
+    "print(d)"
    ]
   },
   {
@@ -207,11 +346,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[0.08639216 0.14994641 0.25333583 0.30481673 0.28851558]\n",
+      "  [0.24726271 0.86527519 0.19673267 0.68732616 0.34692976]\n",
+      "  [0.30463244 0.93057679 0.12604749 0.41342702 0.14470182]]\n",
+      "\n",
+      " [[0.16178458 0.52602654 0.50854505 0.0807047  0.29699063]\n",
+      "  [0.39723305 0.69824029 0.35982204 0.93213748 0.75934602]\n",
+      "  [0.1043032  0.51699651 0.33682344 0.34572235 0.70329057]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "\n",
+    "e=np.multiply(a,c)\n",
+    "\n",
+    "print(e)"
    ]
   },
   {
@@ -223,11 +380,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code/answer here"
+    "# your code/answer here\n",
+    "\n",
+    "print(np.sum(e)==np.sum(a))"
    ]
   },
   {
@@ -239,11 +406,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.9321374811287426\n",
+      "1.0807047035930402\n",
+      "1.4024628409333504\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "d_max=np.max(d)\n",
+    "d_min=np.min(d)\n",
+    "d_mean=np.mean(d)\n",
+    "\n",
+    "print(d_max)\n",
+    "print(d_min)\n",
+    "print(d_mean)"
    ]
   },
   {
@@ -259,7 +443,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "\n",
+    "np.empty()"
    ]
   },
   {
@@ -359,7 +545,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
