--- a/module-1/Functional-Programming/your-code/Q1.ipynb
+++ b/module-1/Functional-Programming/your-code/Q1.ipynb
@@ -4,12 +4,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In the cell below, create a Python function that wraps your previous solution for the Bag of Words lab.\n",
+    "In the cell below, create a Python function that creates a Bag of Words.\n",
     "\n",
     "Requirements:\n",
     "\n",
     "1. Your function should accept the following parameters:\n",
-    "    * `docs` [REQUIRED] - array of document paths.\n",
+    "    * `corpus` [REQUIRED] - list of strings.\n",
     "    * `stop_words` [OPTIONAL] - array of stop words. The default value is an empty array.\n",
     "\n",
     "1. Your function should return a Python object that contains the following:\n",
@@ -19,49 +19,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"\\n            Loop `corpus` again. For each doc string, count the number of occurrences of each term in `bag_of_words`. \\n            Create an array for each doc's term frequency and append it to `term_freq`.\\n            \""
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Import required libraries\n",
-    "\n",
     "# Define function\n",
-    "def get_bow_from_docs(docs, stop_words=[]):\n",
+    "# def get_bow_from_docs(corpus, stop_words=[]):\n",
+    "\n",
     "    \n",
     "    # In the function, first define the variables you will use such as `corpus`, `bag_of_words`, and `term_freq`.\n",
     "    \n",
-    "    \n",
-    "    \n",
-    "    \"\"\"\n",
-    "    Loop `docs` and read the content of each doc into a string in `corpus`.\n",
-    "    Remember to convert the doc content to lowercases and remove punctuation.\n",
-    "    \"\"\"\n",
     "\n",
     "    \n",
+    "    \"\"\"\n",
+    "    Convert corpus to lowercases and remove punctuation.\n",
+    "    \"\"\"\n",
+    "  \n",
+    "    \n",
     "    \n",
     "    \"\"\"\n",
-    "    Loop `corpus`. Append the terms in each doc into the `bag_of_words` array. The terms in `bag_of_words` \n",
+    "    Loop `corpus`. Append the individual words in each doc into the `bag_of_words` array. The terms in `bag_of_words` \n",
     "    should be unique which means before adding each term you need to check if it's already added to the array.\n",
     "    In addition, check if each term is in the `stop_words` array. Only append the term to `bag_of_words`\n",
     "    if it is not a stop word.\n",
     "    \"\"\"\n",
     "\n",
-    "    \n",
+    "   \n",
     "    \n",
     "    \n",
     "    \"\"\"\n",
     "    Loop `corpus` again. For each doc string, count the number of occurrences of each term in `bag_of_words`. \n",
     "    Create an array for each doc's term frequency and append it to `term_freq`.\n",
     "    \"\"\"\n",
-    "\n",
+    "    \n",
+    "   \n",
     "    \n",
     "    \n",
     "    # Now return your output as an object\n",
-    "    return {\n",
-    "        \"bag_of_words\": bag_of_words,\n",
-    "        \"term_freq\": term_freq\n",
-    "    }\n",
-    "    "
+    "   \n",
+    "\n",
+    "\n",
+    "      "
    ]
   },
   {
@@ -75,18 +85,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'builtin_function_or_method' object is not subscriptable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-28-bb499f5e9da6>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     42\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     43\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 44\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mget_bow_from_docs\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ma_corpus\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-28-bb499f5e9da6>\u001b[0m in \u001b[0;36mget_bow_from_docs\u001b[0;34m(corpus, stop_words)\u001b[0m\n\u001b[1;32m     34\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0mz\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mbag_of_words\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     35\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mz\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mi\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 36\u001b[0;31m                 \u001b[0mfreq\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     37\u001b[0m             \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     38\u001b[0m                 \u001b[0mfreq\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: 'builtin_function_or_method' object is not subscriptable"
+     ]
+    }
+   ],
    "source": [
-    "# Define doc paths array\n",
-    "docs = []\n",
+    "a_corpus = ['Ironhack is Cool!', 'I love Ironhack', 'I am a student at Ironhack.']\n",
     "\n",
-    "# Obtain BoW from your function\n",
-    "bow = get_bow_from_docs(docs)\n",
+    "def get_bow_from_docs(corpus, stop_words=[]):\n",
+    "    \n",
+    "    bag_of_words=[]\n",
+    "    term_freq=[]\n",
+    "    corpus_lwr=[]\n",
+    "    corpus_format=[]\n",
+    "    corpus_words=[]\n",
+    "    corpus_words=[]\n",
+    "    \n",
+    "    \n",
+    "    for i in corpus:\n",
+    "        z=i.lower()\n",
+    "        corpus_lwr.append(z)\n",
+    "        \n",
+    "    for i in corpus_lwr:\n",
+    "        z=i.replace('.','').replace('!','')\n",
+    "        corpus_format.append(z)\n",
+    "        \n",
+    "    \n",
+    "    for i in corpus_format:\n",
+    "        z=i.split(' ')\n",
+    "        corpus_words.append(z)\n",
+    "        \n",
+    "    \n",
+    "    for sentence in corpus_words:\n",
+    "        for word in sentence:\n",
+    "            if word not in bag_of_words:\n",
+    "                bag_of_words.append(word)\n",
+    "                \n",
+    "    for i in corpus_words:\n",
+    "        freq=[]\n",
+    "        for z in bag_of_words:\n",
+    "            if z in i:\n",
+    "                freq.append[1]\n",
+    "            else:\n",
+    "                freq.append[0]\n",
+    "        term_freq.append(freq)\n",
+    "        \n",
+    "        return {\"bag_of_words\": bag_of_words,\"term_freq\": term_freq}\n",
     "\n",
-    "# Print BoW\n",
-    "print(bow)"
+    "\n",
+    "print(get_bow_from_docs(a_corpus))"
    ]
   },
   {
@@ -116,7 +175,7 @@
     "\n",
     "```frozenset({'across', 'mine', 'cannot', ...})```\n",
     "\n",
-    "`frozenset` is a type of Python object that is immutable. In this lab you can use it just like an array without conversion."
+    "`frozenset` is a type of Python object that is immutable. In this lab you can use it just like an array (list) without conversion."
    ]
   },
   {
@@ -148,6 +207,34 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "poem = \"\"\"I was angry with my friend; \n",
+    "I told my wrath, my wrath did end.\n",
+    "I was angry with my foe: \n",
+    "I told it not, my wrath did grow. \n",
+    "\n",
+    "And I waterd it in fears,\n",
+    "Night & morning with my tears: \n",
+    "And I sunned it with smiles,\n",
+    "And with soft deceitful wiles. \n",
+    "\n",
+    "And it grew both day and night. \n",
+    "Till it bore an apple bright. \n",
+    "And my foe beheld it shine,\n",
+    "And he knew that it was mine. \n",
+    "\n",
+    "And into my garden stole, \n",
+    "When the night had veild the pole; \n",
+    "In the morning glad I see; \n",
+    "My foe outstretched beneath the tree.\"\"\"\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -170,7 +257,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
